comm run script for nvt 600K

--- a/AB42_WM/system/setup/setup.ipynb
+++ b/AB42_WM/system/setup/setup.ipynb
@@ -92,8 +92,8 @@
     "# preliminary 2-ns simulation at 600 K in the NVT ensemble\n",
     "# the paper doesn't mention position restraints. so no position restraints? obv no posres cuz want to find max rms replicas\n",
     "# also which thermostat to use?\n",
-    "gmx_mpi grompp -f ../mdp_files/nvt_600.mdp -c em_output.gro -p ../topol.top -o nvt_600_input.tpr -maxwarn 1\n",
-    "gmx_mpi mdrun -s nvt_600_input.tpr -o nvt_600.trr -x nvt_600.xtc -c nvt_600_output.gro -g nvt_600.log -e nvt.edr -v &> nvt_run.log"
+    "gmx_mpi grompp -f ../mdp_files/nvt-run-600.mdp -c em_output.gro -p ../topol.top -o nvt_600_input.tpr -maxwarn 1\n",
+    "gerun gmx_mpi mdrun -s nvt_600_input.tpr -o nvt_600.trr -x nvt_600.xtc -c nvt_600_output.gro -g nvt_600.log -e nvt.edr -v &> nvt_600.log"
    ]
   },
   {
