--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "gmx_mpi pdb2gmx -f ../template.pdb -o template.gro -water tip3p\n",
+    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p\n",
     "\n",
     "# -------------------------------------------------------\n",
     "# Program:     gmx pdb2gmx, version 2022.5-plumed_2.9.0\n",
