comm minor changes

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -6,28 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx_mpi grompp -f ../mdp_files/invacuo-run.mdp -c ../template.gro -p ../topol.top -o invacuo_input.tpr -maxwarn 1\n",
+    "gerun gmx_mpi mdrun -s invacuo_input.tpr -o invacuo.trr -x invacuo.xtc -c collapsed.gro -g invacuo.log -e invacuo.edr -v -maxh 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p\n",
     "\n",
-    "# -------------------------------------------------------\n",
-    "# Program:     gmx pdb2gmx, version 2022.5-plumed_2.9.0\n",
-    "# Source file: src/gromacs/gmxpreprocess/ter_db.cpp (line 138)\n",
-    "# Function:    void read_atom(char*, bool, std::string*, t_atom*, PreprocessingAtomTypes*, int*)\n",
     "\n",
-    "# Inconsistency in user input:\n",
-    "# Atom type OH specified in terminal database has not been defined in the force\n",
-    "# field\n",
-    "\n",
-    "# For more information and tips for troubleshooting, please check the GROMACS\n",
-    "# website at http://www.gromacs.org/Documentation/Errors\n",
-    "# -------------------------------------------------------\n",
-    "\n",
-    "# Changed aminoacids.c.tdb OH to OH1.This worked! Potential typo in force field files?\n",
+    "# 1ns in vacuo simulation. nvt or production?\n",
     "\n",
     "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 1.0 -bt dodecahedron\n",
     "# output of the above command Volume: 362.038 nm^3\n",
     "\n",
-    "gmx_mpi editconf -f ../template.gro -o template_newbox2.gro -c -d 2.0 -bt dodecahedron\n",
+    "# used this as larger distance from replica\n",
+    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 2.0 -bt dodecahedron\n",
     "\n",
     "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n",
     "# only 5922 solvent molecules added compared to 11000 in the paper\n",
@@ -52,6 +59,13 @@
     "# van der Waals Volumes and Radii\n",
     "# J. Phys. Chem. 68 (1964) pp. 441-451"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
