--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -6,16 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh"
+    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh\n",
+    "\n",
+    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 1.4 -bt dodecahedron\n",
+    "\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/em.mdp -c genion_KCl_output.gro -p ../topol.top -o em_input.tpr -maxwarn 1\n",
+    "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "gmx_mpi grompp -f ../mdp_files/invacuo-run.mdp -c ../template.gro -p ../topol.top -o invacuo_input.tpr -maxwarn 1\n",
+    "\n",
+    "# kept encountering this error even after increasing box size\n",
+    "# ERROR 1 [file topol.top, line 5629]:\n",
+    "#   ERROR: The cut-off length is longer than half the shortest box vector or\n",
+    "#   longer than the smallest box diagonal element. Increase the box size or\n",
+    "#   decrease rlist\n",
+    "\n",
     "gerun gmx_mpi mdrun -s invacuo_input.tpr -o invacuo.trr -x invacuo.xtc -c collapsed.gro -g invacuo.log -e invacuo.edr -v -maxh 10"
    ]
   },
