added script for ab40 em

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "# energy minimization\n",
     "# same confusion as previous cell regarding mdp file, cutoff distances and other parameters different\n",
-    "gmx_mpi grompp -f ../mdp_files/em.mdp -c genion_KCl_output.gro -p ../topol.top -o em_input.tpr -maxwarn 1\n",
+    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c genion_KCl_output.gro -p ../topol.top -o em_input.tpr -maxwarn 1\n",
     "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10\n",
     "\n",
     "# Steepest Descents converged to Fmax < 1000 in 101 steps\n",
