added 3-berendsen run script

--- a/AB42_WM/system/setup/setup.ipynb
+++ b/AB42_WM/system/setup/setup.ipynb
@@ -50,7 +50,13 @@
     "# ++++ PLEASE READ AND CITE THE FOLLOWING REFERENCE ++++\n",
     "# A. Bondi\n",
     "# van der Waals Volumes and Radii\n",
-    "# J. Phys. Chem. 68 (1964) pp. 441-451"
+    "# J. Phys. Chem. 68 (1964) pp. 441-451\n",
+    "\n",
+    "# value of -d parameter doesn't really matter, use smaller value for less computational load\n",
+    "gmx_mpi editconf -f ../template.gro -o template_newbox2.gro -c -d 1.5 bt dodecahedron\n",
+    "\n",
+    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol_orig.top\n",
+    "# Number of solvent molecules:   9353"
    ]
   },
   {
@@ -63,11 +69,11 @@
     "\n",
     "# am confused about the mdp file used. the file uses 1nm as the cutoff distances for WDW/coulomb interactions\n",
     "# while the cutoff used in actual simulation is 1.2\n",
-    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol.top -o genion_NaCl_input.tpr\n",
-    "gmx_mpi genion -s genion_NaCl_input.tpr -o genion_NaCl_output.gro -conc 0.137 -pname NA -nname CL -p ../topol.top\n",
+    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol_orig.top -o genion_NaCl_input.tpr\n",
+    "gmx_mpi genion -s genion_NaCl_input.tpr -o genion_NaCl_output.gro -conc 0.137 -pname NA -nname CL -p ../topol_orig.top\n",
     "\n",
-    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c genion_NaCl_output.gro -p ../topol.top -o genion_KCl_input.tpr\n",
-    "gmx_mpi genion -s genion_KCl_input.tpr -o genion_KCl_output.gro -conc 0.00268 -pname K -nname CL -p ../topol.top"
+    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c genion_NaCl_output.gro -p ../topol_orig.top -o genion_KCl_input.tpr\n",
+    "gmx_mpi genion -s genion_KCl_input.tpr -o genion_KCl_output.gro -conc 0.00268 -pname K -nname CL -p ../topol_orig.top"
    ]
   },
   {
