--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -99,6 +99,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# following Alice's instructions to collapse the protein\n",
+    "# 1 – energy minimisation\n",
+    "\n",
+    "# 2 – position restraints\n",
+    "\n",
+    "# 3 – Berendsen, using the .mdp file I attached below at 310K (this won’t collapse the structure, it’s just a step before to equilibrate)\n",
+    "\n",
+    "# 4 – NVT 600K to get the collapsed structure"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -112,6 +128,20 @@
     "# Potential Energy  = -2.6635816e+05\n",
     "# Maximum force     =  9.3316010e+02 on atom 409\n",
     "# Norm of force     =  7.3510789e+01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_input.tpr -maxwarn 1\n",
+    "# NOTE 2 [file unknown]:\n",
+    "#   You are using constraints on all bonds, whereas the forcefield has been\n",
+    "#   parametrized only with constraints involving hydrogen atoms. We suggest\n",
+    "#   using constraints = h-bonds instead, this will also improve performance.\n",
+    "gerun gmx_mpi mdrun -s 3-berendsen_input.tpr -o 3b.trr -x 3b.xtc -c 3b_output.gro -g 3b.log -e nvt.edr -v &> 3b_terminal.log"
    ]
   },
   {
