--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -6,13 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using hydrogen mass repartitioning for longer timesteps\n",
+    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -ignh -heavyh\n",
+    "\n",
     "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh\n",
     "\n",
-    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 1.4 -bt dodecahedron\n",
+    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 2 -bt dodecahedron\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c template_newbox.gro -p ../topol.top -o em_input.tpr -maxwarn 2\n",
     "\n",
+    "# Got the following warning\n",
+    "# WARNING 1 [file ffnonbonded.itp, line 68]:\n",
+    "#   Atomtype OT was defined previously (e.g. in the forcefield files), and\n",
+    "#   has now been defined again. This could happen e.g. if you would use a\n",
+    "#   self-contained molecule .itp file that duplicates or replaces the\n",
+    "#   contents of the standard force-field files. You should check the contents\n",
+    "#   of your files and remove such repetition. If you know you should override\n",
+    "#   the previous definition, then you could choose to suppress this warning\n",
+    "#   with -maxwarn.\n",
     "\n",
-    "gmx_mpi grompp -f ../mdp_files/em.mdp -c genion_KCl_output.gro -p ../topol.top -o em_input.tpr -maxwarn 1\n",
-    "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10\n"
+    "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10"
    ]
   },
   {
@@ -90,7 +111,7 @@
     "\n",
     "# am confused about the mdp file used. the file uses 1nm as the cutoff distances for WDW/coulomb interactions\n",
     "# while the cutoff used in actual simulation is 1.2\n",
-    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol.top -o genion_NaCl_input.tpr\n",
+    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol.top -o genion_NaCl_input.tpr -maxwarn 1\n",
     "gmx_mpi genion -s genion_NaCl_input.tpr -o genion_NaCl_output.gro -conc 0.137 -pname NA -nname CL -p ../topol.top\n",
     "\n",
     "gmx_mpi grompp -f ../mdp_files/ions.mdp -c genion_NaCl_output.gro -p ../topol.top -o genion_KCl_input.tpr\n",
@@ -136,12 +157,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_input.tpr -maxwarn 1\n",
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_input2.tpr -maxwarn 1\n",
     "# NOTE 2 [file unknown]:\n",
     "#   You are using constraints on all bonds, whereas the forcefield has been\n",
     "#   parametrized only with constraints involving hydrogen atoms. We suggest\n",
     "#   using constraints = h-bonds instead, this will also improve performance.\n",
-    "gerun gmx_mpi mdrun -s 3-berendsen_input.tpr -o 3b.trr -x 3b.xtc -c 3b_output.gro -g 3b.log -e nvt.edr -v &> 3b_terminal.log"
+    "gerun gmx_mpi mdrun -s 3-berendsen_input.tpr -o 3b.trr -x 3b.xtc -c 3b_output.gro -g 3b.log -e nvt.edr -v &> 3b_terminal.log\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c 3b_temp_output.gro -r 3b_temp_output.gro -p ../topol.top -o 3-berendsen_input_final.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm 3-berendsen_final.tpr -v &> 3b_final_terminal.log\n",
+    "\n",
+    "\n",
+    "# Fatal error:\n",
+    "# 2 particles communicated to PME rank 3 are more than 2/3 times the cut-off out\n",
+    "# of the domain decomposition cell of their charge group in dimension x.\n",
+    "# This usually means that your system is not well equilibrated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and attempting 3-berendsen step again after chaning 3-berendsen.mdp parameters: T = 278 K, timestep = 1 fs\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_v1.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm 3-berendsen_v1.tpr -v &> 3-berendsen.log"
    ]
   },
   {
