comm collapsed ab40 structure

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -12,7 +12,8 @@
     "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh\n",
     "\n",
     "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 2 -bt dodecahedron\n",
-    "\n"
+    "\n",
+    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n"
    ]
   },
   {
@@ -21,7 +22,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c template_newbox.gro -p ../topol.top -o em_input.tpr -maxwarn 2\n",
+    "# following Alice's instructions to collapse the protein\n",
+    "# 1 – energy minimisation\n",
+    "\n",
+    "# 2 – position restraints\n",
+    "\n",
+    "# 3 – Berendsen, using the .mdp file I attached below at 310K (this won’t collapse the structure, it’s just a step before to equilibrate)\n",
+    "\n",
+    "# 4 – NVT 600K to get the collapsed structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1\n",
+    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c template_solv.gro -p ../topol.top -o em_input.tpr -maxwarn 2\n",
     "\n",
     "# Got the following warning\n",
     "# WARNING 1 [file ffnonbonded.itp, line 68]:\n",
@@ -30,10 +48,120 @@
     "#   self-contained molecule .itp file that duplicates or replaces the\n",
     "#   contents of the standard force-field files. You should check the contents\n",
     "#   of your files and remove such repetition. If you know you should override\n",
-    "#   the previous definition, then you could choose to suppress this warning\n",
+    "#   the previous definition, then you could choose to suppress this warningb\n",
     "#   with -maxwarn.\n",
     "\n",
-    "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10"
+    "gerun gmx_mpi mdrun -s em -v -maxh 10 &> em_terminal.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/2-pr.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 2-pr.tpr -maxwarn 3\n",
+    "gerun gmx_mpi mdrun -deffnm 2-pr -v &> 2-pr_terminal.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen_1.mdp -c 2-pr.gro -r 2-pr.gro -p ../topol.top -o 3-berendsen.tpr -maxwarn 3\n",
+    "gerun gmx_mpi mdrun -deffnm 3-berendsen -v &> 3-berendsen-terminal.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/4-nvt-600.mdp -c 3-berendsen.gro -r 3-berendsen.gro -p ../topol.top -o 4-nvt-600.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm 4-nvt-600 -v &> 4-nvt-600-terminal.log\n",
+    "\n",
+    "# restarting step 4\n",
+    "gerun gmx_mpi mdrun -cpi 4-nvt-600 -deffnm 4-nvt-600 -v &> 4-nvt-600-terminal-r2.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copied the .gro file produced to visualize the structure. More than one peptides present.\n",
+    "scp -o ProxyJump=zcbtar9@ssh-gateway.ucl.ac.uk zcbtar9@kathleen.rc.ucl.ac.uk:~/projects/amyloid-beta-research/ab40/system/setup/4-nvt-600.gro ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tried extracting collapsed structure from output .gro file. Didn't because structure was split at edges\n",
+    "\n",
+    "gmx_mpi make_ndx -f 4-nvt-600.gro -o collapsed-index.ndx\n",
+    "\n",
+    "> a 1-598  # Adjust the atom range as needed for your protein\n",
+    "> q \n",
+    "\n",
+    "gmx_mpi trjconv -f 4-nvt-600.gro -s 4-nvt-600.gro -o collapsed-ab40.gro -n collapsed-index.ndx\n",
+    "\n",
+    "scp -o ProxyJump=zcbtar9@ssh-gateway.ucl.ac.uk zcbtar9@kathleen.rc.ucl.ac.uk:~/projects/amyloid-beta-research/ab40/system/setup/collapsed-ab40.gro ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting collapsed structure from trajectory using mdtraj\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "import math\n",
+    "from numpy import log2, zeros, mean, var, sum, loadtxt, arange, \\\n",
+    "                  array, cumsum, dot, transpose, diagonal, floor\n",
+    "from numpy.linalg import inv, lstsq\n",
+    "import seaborn as sns\n",
+    "import scipy.cluster.hierarchy\n",
+    "from scipy.spatial.distance import squareform\n",
+    "import sklearn\n",
+    "from sklearn.decomposition import PCA\n",
+    "import itertools\n",
+    "import mdtraj as md\n",
+    "\n",
+    "topology=f\"4-nvt-600.gro\"\n",
+    "trajectory=f\"4-nvt-600.trr\"\n",
+    "\n",
+    "trj = md.load(trajectory, top=topology,stride=1)\n",
+    "trj = trj.atom_slice(range(598))\n",
+    "trj.center_coordinates()\n",
+    "top = trj.topology\n",
+    "first_frame = 0\n",
+    "last_frame = trj.n_frames\n",
+    "n_frames=trj.n_frames\n",
+    "\n",
+    "print(n_frames)\n",
+    "\n",
+    "frame = trj[454]\n",
+    "frame.save('454.gro')"
    ]
   },
   {
@@ -201,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,12 +355,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topology=f\"em_output.gro\"\n",
-    "trajectory=f\"nvt_600.trr\"\n",
+    "topology=f\"4-nvt-600.gro\"\n",
+    "trajectory=f\"4-nvt-600.trr\"\n",
     "    \n",
     "# print(\"pdb:\",topology)\n",
     "# print(\"trjaectory:\",trajectory)"
@@ -240,23 +368,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2001"
+       "501"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "trj = md.load(trajectory, top=topology,stride=1)\n",
-    "trj = trj.atom_slice(range(627))\n",
+    "trj = trj.atom_slice(range(598))\n",
     "trj.center_coordinates()\n",
     "top = trj.topology\n",
     "first_frame = 0\n",
@@ -264,6 +392,25 @@
     "n_frames=trj.n_frames\n",
     "\n",
     "n_frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = trj[454]\n",
+    "frame.save('454.gro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trj.save_trr('ab40-no-water.trr')"
    ]
   },
   {
