comm 5-nvt-600.mdp

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -166,6 +166,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# procedure to extract 48 confirmations\n",
+    "\n",
+    "# 1. adding water molecules\n",
+    "gmx_mpi editconf -f collapsed-ab40.gro -o template_newbox.gro -c -d 1.2 -bt dodecahedron\n",
+    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n",
+    "\n",
+    "# 2. adding ions\n",
+    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol.top -o genion_NaCl_input.tpr -maxwarn 2\n",
+    "# WARNING 2 [file topol.top, line 5632]:\n",
+    "#   96 non-matching atom names\n",
+    "#   atom names from ../topol.top will be used\n",
+    "#   atom names from template_solv.gro will be ignored\n",
+    "gmx_mpi genion -s genion_NaCl_input.tpr -o genion_NaCl_output.gro -conc 0.137 -pname NA -nname CL -p ../topol.top\n",
+    "\n",
+    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c genion_NaCl_output.gro -p ../topol.top -o genion_KCl_input.tpr -maxwarn 1\n",
+    "gmx_mpi genion -s genion_KCl_input.tpr -o genion_KCl_output.gro -conc 0.00268 -pname K -nname CL -p ../topol.top\n",
+    "# no KCl ions added\n",
+    "\n",
+    "# 3. Energy minimization\n",
+    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c  genion_KCl_output.gro -p ../topol.top -o em.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm em -v -maxh 11 &> em-terminal.log\n",
+    "\n",
+    "# 4. position restraints\n",
+    "gmx_mpi grompp -f ../mdp_files/2-pr.mdp -c em.gro -r em.gro -p ../topol.top -o 2-pr.tpr -maxwarn 3\n",
+    "gerun gmx_mpi mdrun -deffnm 2-pr -v &> 2-pr-terminal.log\n",
+    "gmx_mpi mdrun -deffnm 2-pr -rcon 1.5 -dds 0.8 -v &> 2-pr-terminal.log\n",
+    "# There is no domain decomposition for 60 ranks that is compatible with the\n",
+    "# given box and a minimum cell size of 1.37088 nm\n",
+    "# Change the number of ranks or mdrun option -rcon or -dds or your LINCS\n",
+    "# settings\n",
+    "# Look in the log file for details on the domain decomposition\n",
+    "\n",
+    "# Changed the number of ranks to 48\n",
+    "\n",
+    "# 5. Berendsen\n",
+    "gmx_mpi grompp -f ../mdp_files/3-berendsen_1.mdp -c 2-pr.gro -r 2-pr.gro -p ../topol.top -o 3-berendsen.tpr -maxwarn 3\n",
+    "gerun gmx_mpi mdrun -deffnm 3-berendsen -v &> 3-berendsen-terminal.log\n",
+    "\n",
+    "# 6. nvt-600\n",
+    "gmx_mpi grompp -f ../mdp_files/4-nvt-600.mdp -c 3-berendsen.gro -r 3-berendsen.gro -p ../topol.top -o 4-nvt-600.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm 4-nvt-600 -v &> 4-nvt-600-terminal.log\n",
+    "\n",
+    "\n",
+    "# experiment: directly doing nvt-600 after EM\n",
+    "gmx_mpi grompp -f ../mdp_files/5-nvt-600.mdp -c em.gro -r em.gro -p ../topol.top -o 5-nvt-600.tpr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
